--- a/src/MvcDemos/index.html
+++ b/src/MvcDemos/index.html
@@ -4,7 +4,9 @@
     <title></title>
 </head>
 <body ng-app="app">
-    <a href="#/reservation">Reservation</a>
+    <a href="#/reservation">Validation - client &Aacute; server side</a>
+    <a href="#/reservationServerSideOnly">Validation server side only</a>
+
     <div ui-view></div>
 </body>
 </html>
