Pass server variable to javascript to angular

--- a/src/MvcDemos/index.html
+++ b/src/MvcDemos/index.html
@@ -21,3 +21,6 @@
 
 <script src="app/reservation/reservation.controller.js"></script>
 <script src="app/reservation/reservation.dataservice.js"></script>
+
+<!-- MVC will render a javascript file-->
+<script src="setting/settings"></script>
