--- a/src/MvcDemos/app/reservation/reservation.html
+++ b/src/MvcDemos/app/reservation/reservation.html
@@ -1,21 +1,4 @@
-﻿<div>
-    <form name="reservationForm" novalidate
-          ng-submit="vm.submit(reservationForm.$valid)">
-        <div>
-            <h1>{{vm.title}}</h1>
-            <div class="field name-field">
-                <input class="input" type="text" name="name" placeholder="First Name + Last Name"
-                       required
-                       ng-model="vm.reservation.name"
-                       ng-model-options="{ updateOn: 'blur' }" />
-                <div ng-if="reservationForm.$submitted" ng-messages="reservationForm.name.$error" class="errors">
-                    <div ng-message="required">You did not enter your name</div>
-                </div>
-            </div>
+﻿<a ui-sref="reservation.ClientSide">client side</a>
+<a ui-sref="reservation.ServerSideOnly">server side</a>
+<div ui-view></div>
 
-            <nav class="form-actions">
-                <input type="submit" value="Submit" class="button primary" />
-            </nav>
-        </div>
-    </form>
-</div>
