searchbox directive added

--- a/src/MvcDemos/index.html
+++ b/src/MvcDemos/index.html
@@ -70,6 +70,7 @@
 
 <script src="app/reservation/reservation.controller.js"></script>
 <script src="app/reservation/reservation.dataservice.js"></script>
+<script src="app/searchbox.js"></script>
 
 <!-- MVC will render a javascript file-->
 <script src="setting/settings"></script>
