--- a/src/MvcDemos/app/reservation/reservation.html
+++ b/src/MvcDemos/app/reservation/reservation.html
@@ -1,4 +1,7 @@
 ﻿<a ui-sref="reservation.ClientSide">client side</a>
 <a ui-sref="reservation.ServerSideOnly">server side</a>
+
+<search-box search-field="music" search-term="whatever"></search-box>
+
 <div ui-view></div>
 
