--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app="app">
 <head>
     <style>
@@ -52,6 +52,9 @@
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/bower_components/angular-strap/dist/angular-strap.js"></script>
     <script src="/bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
+    <script src="/bower_components/br-validations/releases/br-validations.js"></script>
+    <script src="/bower_components/string-mask/src/string-mask.js"></script>
+    <script src="/bower_components/angular-input-masks/angular-input-masks-standalone.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js js/app.js -->
@@ -85,6 +88,7 @@
     <script src="/src/client/app/dashboard/dashboard.route.js"></script>
     <script src="/src/client/app/demo/demo.controller.js"></script>
     <script src="/src/client/app/demo/demo.route.js"></script>
+    <script src="/src/client/lib/i18n/angular-locale_nl-be.js"></script>
     <script src="/src/client/app/layout/ht-sidebar.directive.js"></script>
     <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
     <script src="/src/client/app/layout/shell.controller.js"></script>
